--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ p {
 	margin-bottom: 12px; 
     font-family: 'Lato', sans-serif;
 	font-weight: 300;
-	font-size: 18px; 
+	font-size: 24px; 
 	line-height: 28px;
 	color: #666; 
 	margin-top: 10px; 
@@ -63,7 +63,7 @@ body {
 .mb {margin-bottom: 50px;}
 .mtb {margin-top: 50px; margin-bottom: 50px;}
 .mtb2 { margin-top: 100px; margin-bottom: 100px;}
-.ptb {padding-top: 80px; padding-bottom: 80px;}
+.ptb {padding-top: 20px; padding-bottom: 40px;}
 
 .clear {
 	clear: both;
@@ -205,7 +205,7 @@ input {
 	padding-top: 5px;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 700px;
+	height: 100%;
 	width: 100%;
 	
     -webkit-background-size: 100%;
@@ -244,13 +244,15 @@ input {
 #g {
 	padding-top: 50px;
 	padding-bottom: 50px;
-	background: #f5f5f5;
+	background: #22A7F0;
+	color: white;
 }
 
 .portfolio {
 	padding:0 !important;
 	margin:0 !important;
 	display:block;
+	background: #22A7F0;
 }
 
 
