--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,10 +242,10 @@ input {
 
 /* GREY SECTION */
 #g {
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding-top: 5px;
 	background: #22A7F0;
 	color: white;
+	height: 100%;
 }
 
 .portfolio {
