--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,8 +206,7 @@ input {
 	padding-top: 5px;
 	background-attachment: relative;
 	background-position: center center;
-	height: 100%;
-	width: 100%;
+	min-height:700px;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -224,7 +223,7 @@ input {
 #h .logo {
 	margin-top: 30px;
 	margin-left: 40px;
-	padding-bottom: 150px;
+	padding-bottom: 100px;
 }
 
 #h .logo h2{
