--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,8 @@ input {
 	padding-top: 5px;
 	background-attachment: relative;
 	background-position: center center;
-	min-height:700px;
+	min-height:800px;
+	height:100%;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
