--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ input {
 /* CONTACT SEPARATOR */
 #sep {
 	background: url(../img/sep.jpg) no-repeat center top;
-	padding-top: 100px;
+	padding-top: 5%;
 	background-attachment: relative;
 	background-position: center center;
 	min-height: 450px;
