--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,11 +330,12 @@ input {
 #f {
 	padding-top: 25px;
 	padding-bottom: 25px;
-	background-color: #22A7F0;
+	background-color: #FFCB0B;
 }
 
 #f i {
-	margin-right: 30px;
+	margin-left: 20px;
+	margin-right: 20px;
 	font-size: 35px;
 }
 
