changed experience color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ input {
 #g {
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background: #22A7F0;
+	background: #1F5167;
 	color: white;
 }
 
@@ -288,7 +288,7 @@ input {
 	padding:0 !important;
 	margin:0 !important;
 	display:block;
-	background: #22A7F0;
+	background: #1F5167;
 }
 
 
