changed hue of blue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ input {
 #g {
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background: #1F5167;
+	background: #162F45;
 	color: white;
 }
 
@@ -371,7 +371,7 @@ input {
 #f {
 	padding-top: 25px;
 	padding-bottom: 25px;
-	background-color: #FFCB0B;
+	background-color: #162F45;
 }
 
 #f i {
